--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fontsource-variable/noto-sans-jp": "^5.2.9",
+    "@fontsource/inter": "^5.2.8",
+    "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.24.11",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.70.0",
+    "resend": "^6.6.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
